# tkbeads

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: architecture.md  testing.md
docs/plans/: 2026-01-13-tkbeads-design.md  2026-01-14-mvp-design.md  2026-01-14-skeleton-design.md  2026-01-14-testing-design.md
src/tkbeads/: __init__.py  __main__.py  app.py
src/tkbeads.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tkbeads/styles/: app.tcss
tests/: test_app.py
